<resources>
    <string name="app_name">InventoryApp</string>
    <string name="quantity_instock">Available</string>
    <string name="quantity_nostock">Out of stock</string>
    <string name="quantity">Quantity:</string>
    <string name="name">Name:</string>
    <string name="item_name">Item name</string>
    <string name="price_of_the_item">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="phone_mobile">Phone/Mobile:</string>
    <string name="phone_number">Phone Number</string>
    <string name="supplier">Supplier:</string>

    <string name="empty_view_title_text">Oh no, we need to restock!</string>
    <string name="empty_view_subtitle_text">Start by adding an item</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_delete">Delete</string>

    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_update__item_failed">Error with saving item</string>
    <string name="entry_insert_item_failed">Error with saving item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_activity_title_new_item">New Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="availability">Availability</string>
    <string name="quantity_error">No item available</string>
    <string name="sold">SOLD</string>
    <string name="unknown">Unknown</string>
    <string name="quantityTag">Quantity:</string>
    <string name="priceTag">Price:</string>
    <string name="itemTag">Item:</string>
    <string name="availabilityTag">Availability:</string>
    <string name="supplierTag">Supplier:</string>
    <string name="phoneTag">Phone:</string>
    <string name="minus">–</string>
    <string name="plus">+</string>
    <string name="name_required">Name is required</string>
    <string name="price_required">Price is required</string>
    <string name="quantity_required">Quantity is required</string>
    <string name="supplier_required">Supplier is required</string>
    <string name="phone_required">Phone is required</string>
    <string name="availability_required">Availability is required</string>

</resources>
