<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:hint="@string/item_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="Price:"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:hint="@string/price_of_the_item"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:text="@string/quantity"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/decrease_button"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/minus"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number" />

        <Button
            android:id="@+id/increase_button"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/plus"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:text="@string/availability"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinner_availability"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/supplier"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edit_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:hint="@string/supplier_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/phone_mobile"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:hint="@string/phone_number"
            android:inputType="number" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/call_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/colorCall"
            android:focusable="false"
            android:text="Call"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/colorOutStock"
            android:focusable="false"
            android:text="Delete"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>